--- a/src/main/webapp/updateFilm.html
+++ b/src/main/webapp/updateFilm.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>New Film</title>
+    <title>Update Film</title>
   </head>
   <body>
-    <form action="NewFilm.do" method="POST">
+    <form action="Update.do" method="POST">
       <label for="title">Film Title:</label>
       <input type="text" name="title" value="">
       <br>
