--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -12,20 +12,20 @@
       <label for="description">Film Description:</label>
       <input type="text" name="desc" value="">
       <br>
-      <label for="release_year">Release Year:</label>
-      <input type="text" name="release_year" value="">
+      <label for="releaseYear">Release Year:</label>
+      <input type="text" name="releaseYear" value="">
       <br>
        <br>
-      <label for="rental_duration">Rental Duration:</label>
-      <input type="text" name="rental_duration" value="">
+      <label for="rentalDur">Rental Duration:</label>
+      <input type="text" name="rentalDur" value="">
       <br>
        <br>
-      <label for="rental_rate">Rental Rate:</label>
-      <input type="text" name="rental_rate" value="">
+      <label for="rentRate">Rental Rate:</label>
+      <input type="text" name="rentRate" value="">
       <br>
        <br>
-      <label for="replacement_cost">Replacement Cost:</label>
-      <input type="text" name="replacement_cost" value="">
+      <label for="repCost">Replacement Cost:</label>
+      <input type="text" name="repCost" value="">
       <br>
       <input type="submit" value="Add Film">
     </form>
