create film error fixed

--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -24,6 +24,9 @@
       <input type="text" name="rentDur" value="">
       
        <br>
+       <label for="langId">Language id:</label>
+       <input type="text" name="langId" value="">
+       <br>
        
       <label for="rentRate">Rental Rate:</label>
       <input type="text" name="rentRate" value="">
