added bootstrap on jsps

--- a/src/main/webapp/filmByKey.html
+++ b/src/main/webapp/filmByKey.html
@@ -3,13 +3,15 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Films</title>
+
+
+
 </head>
 <body>
 	<h3>Films</h3>
 	<form action="GetFilmDataByKey.do" method="GET">
-		Film Keyword
-		<input type="text" name="keyWord" size="6"/> 
-		<input type="submit" value="Get Film data" />
+		Film Keyword <input type="text" name="keyWord" size="6" /> <input
+			type="submit" value="Get Film data" />
 	</form>
 </body>
 </html>
