--- a/src/main/webapp/filmIdForm.html
+++ b/src/main/webapp/filmIdForm.html
@@ -3,13 +3,17 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Films</title>
+
+
+
 </head>
 <body>
 	<h3>Films</h3>
 	<form action="GetFilmDataById.do" method="GET">
-		Film ID
-		<input type="text" name="filmId" size="4"/> 
-		<input type="submit" value="Get Film data" />
+		Film ID <input type="text" name="filmId" size="4" /> <input
+			type="submit" value="Get Film data" />
 	</form>
+
+
 </body>
 </html>
