--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -40,9 +40,7 @@
 		   <label for="features">Special Features:</label> 
 		   <input type="text" name="features" value=""> 
 		   <br>
-		<label for="langName">Language:</label> <input type="text"
-			name="langName" value=""> <input type="submit"
-			value="Add Film">
+			<input type="submit" value="Add Film">
 	</form>
 </body>
 </html>
