--- a/src/main/webapp/filmIdForm.html
+++ b/src/main/webapp/filmIdForm.html
@@ -4,16 +4,26 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Films</title>
 
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+	crossorigin="anonymous">
+
 
 
 </head>
 <body>
 	<h3>Films</h3>
 	<form action="GetFilmDataById.do" method="GET">
-		Film ID <input type="text" name="filmId" size="4" /> <input
+		Film ID <input type="number" name="filmId" size="4" /> <input
 			type="submit" value="Get Film data" />
 	</form>
 
-
+<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+		crossorigin="anonymous"></script>
+		
 </body>
 </html>
