--- a/src/main/webapp/filmIdForm.html
+++ b/src/main/webapp/filmIdForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Films</title>
@@ -9,6 +9,8 @@
 	rel="stylesheet"
 	integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
 	crossorigin="anonymous">
+	
+	<link rel="icon" type="image/x-icon" href="resources/film.svg">
 
 
 
