--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -11,22 +11,34 @@
 	crossorigin="anonymous">
 	
 	<link rel="icon" type="image/x-icon" href="resources/film.svg">
+	<link rel="stylesheet" href="resources/styles.css">
 
 </head>
 <body>
-
+<h3 align="center">New Film Form</h3>
+<a class="btn btn-dark" href="home.do" role="button" id=homeButton>Home</a>
+<br>
 	<form action="NewFilm.do" method="POST">
-		<label for="title">Film Title:</label> <input type="text" name="title"
-			value="" /> <br> <label for="description">Film
-			Description:</label> <input type="text" name="desc" value=""> <br>
-
+		<label for="title">Film Title:</label> 
+		<input type="text" name="title" value="" />
+		<br> 
+		<br> 
+		<label for="description">Film Description:</label>
+		<input type="text" name="desc" value="">
+		<br>
+		<br>
 		<label for="releaseYear">Release Year:</label>
-		<input type="number" name="releaseYear" value=""> <br> 
-		<label for="rentDur">Rental Duration:</label> <input type="number" name="rentDur" value=""> <br>
+		<input type="number" name="releaseYear" value="">
+		<br> 
+		<br> 
+		<label for="rentDur">Rental Duration:</label>
+		<input type="number" name="rentDur" value="">
+		<br>
+		<br>
 
-		<label for="langId">Choose a language:</label> <select name="langId"
-			id="langId">
-			<option value="">--Please choose an option--</option>
+		<label for="langId">Choose a language:</label>
+		<select name="langId" id="langId">
+			<option value="">Please choose an option</option>
 			<option value="1">English</option>
 			<option value="2">Italian</option>
 			<option value="3">Japanese</option>
@@ -35,31 +47,45 @@
 			<option value="6">German</option>
 		</select> 
 		<br> 
+		<br> 
 		
-		<label for="rentRate">Rental Rate:</label> <input
-			type="number" step="0.01" name="rentRate" value=""> <br> 
-			
+		<label for="rentRate">Rental Rate:</label> 
+		<input type="number" step="0.01" name="rentRate" value="">
+		<div id=nfInfo>
+		<div id="helpBlock" class="form-text"> Rental Rate must end in .99</div>
+		</div>
+			<br>
 			<label for="length">Length:</label> <input type="number" name="length"
-			value=""> <br>
-			 <label for="repCost">Replacement Cost:</label> <input type="number" step="0.01" name="repCost" value=""> <br> 
+			value="">
+			<br>
+			<br>
+			 <label for="repCost">Replacement Cost:</label> 
+			 <input type="number" step="0.01" name="repCost" value="">
+			 <div id=nfInfo2>
+			 <div id="helpBlock" class="form-text">Replacement Cost must end in .99</div>
+			 </div>
+			 <br> 
 			
-			<label for="rating">Choose a Rating:</label> <select name="rating"
-			id="rating">
-			<option value="">--Please choose an option--</option>
+			<label for="rating">Choose a Rating:</label> 
+			<select name="rating" id="rating">
+			<option value="">Please choose an option</option>
 			<option value="G">G</option>
 			<option value="PG">PG</option>
 			<option value="PG13">PG13</option>
 			<option value="R">R</option>
 			<option value="NC17">NC17</option>
-
-
-		</select> <br>
-		 <label for="features">Special Features:</label>
+		</select>
+		<br>
+		<br>
+		<label for="features">Special Features:</label>
 		<input type="text" name=features value="">
+		<div id="nfInfo3">
+		<div id="helpBlock" class="form-text">Special Features may only include <i>Deleted Scenes/Behind the Scenes/Trailers/Commentaries</i></div>
+		</div>
 	
 		<br>
-		
-		<input type="submit" value="Add Film">
+		<br>
+		<input type="submit" class="btn btn-success"value="Add Film">
 	</form>
 	<script
 		src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
