Minor cosmetic changes

--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -52,7 +52,7 @@
 		<label for="rentRate">Rental Rate:</label> 
 		<input type="number" step="0.01" name="rentRate" value="">
 		<div id=nfInfo>
-		<div id="helpBlock" class="form-text"> Rental Rate must end in .99</div>
+		<div id="helpBlock" class="form-text"> Rates often end in .99</div>
 		</div>
 			<br>
 			<label for="length">Length:</label> <input type="number" name="length"
@@ -62,7 +62,7 @@
 			 <label for="repCost">Replacement Cost:</label> 
 			 <input type="number" step="0.01" name="repCost" value="">
 			 <div id=nfInfo2>
-			 <div id="helpBlock" class="form-text">Replacement Cost must end in .99</div>
+			 <div id="helpBlock" class="form-text">Costs often end in .99</div>
 			 </div>
 			 <br> 
 			
